# kampusBot

./: .gitignore  Makefile  pyproject.toml
Bot/: config.py  main.py  messages.py  send.py
