[tool.poetry]
name = "kampusBot"
version = "0.1.0"
description = ""
authors = ["Aslan Abazov <TG:@abazov_a>"]
readme = "README.md"
packages = [{include = "Bot"}]

[tool.poetry.dependencies]
python ="^3.10.5"
pyTelegramBotAPI = "^4.11.0"
python-dotenv = "^1.0.0"

[build-system]
requires= ["poetry-core"]
build-backend = "poetry.core.masonry.api"
